--- a/index.html
+++ b/index.html
@@ -30,20 +30,15 @@
       <div class="container">
       <img src="img/heart.gif" class="animated infinite pulse" height="50px">
       <h2>Bullying benefits nobody</h2>
-      <form action="https://docs.google.com/forms/d/1LwvpdK_Hz-wZcPZl90-sEwLY7QDb1OJo_yuxBFTvU2k/formResponse" method="POST" id="ss-form" target="_self" onsubmit="validate()" name="myForm">
-        <p>Name:</p>
-        <input type="text" name="entry.1712944760" value="" class="ss-q-short" id="entry_1712944760" dir="auto" aria-label="What is your name?  " aria-required="true" required="" title="" style="width:250px">
-        <br>
-        <br>
+      <form action="https://docs.google.com/a/cms.gaggle.net/forms/d/1Wi1_-Xf650lzlpWc4tzPNCuN3qPWIM0ig2g9hGVvWBs/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
         <p>In the spirit of the holidays and the new year, please type one thing you will do yourself that you hope will reduce the amount of bullying</p>
-        <textarea name="entry.214108139" rows="8" cols="0" class="ss-q-long" id="entry_214108139" dir="auto" aria-label="Please type the following text   exactly as it is or providing an adequately similar response, replacing (your name) with your actual name - &quot;I, (your name) hereby promise to not bully anyone anymore. I realize that my actions can be very bad and will do my best to be welcoming and amicable at all times&quot;  " aria-required="true" required="" style="width:60%"></textarea>
+        <textarea name="entry.833676642" rows="8" cols="0" class="ss-q-long" id="entry_833676642" dir="auto" aria-label="Is everything going to be alright?  " aria-required="true" required=""></textarea>
         <br>
         <br>
         <input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action btn btn-default">
         <br>
         <br>
     </form>
-    <p>Bullying is bad for anyone. Especially with recent threats by a kid against my High School due to him/her feeling pain over the last few years. This is really bad. Granted, school shooting or murder is never the answer, but then again, if everybody was simply nice to each other none of this would have happened</p>
     </div>
     </div>
     <center><p>Made with love, HTML, CSS, and Javascript by Andy Kamath</p></span>
