--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <div class="container">
       <img src="img/heart.gif" class="animated infinite pulse" height="50px">
       <h2>Bullying benefits nobody</h2>
-      <form action="https://docs.google.com/a/cms.gaggle.net/forms/d/1Wi1_-Xf650lzlpWc4tzPNCuN3qPWIM0ig2g9hGVvWBs/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
+      <form action="https://docs.google.com/forms/d/1a8rAh85CI-ob5I-RtCKT0gp_41JjkA21u5Kyfr3O5Vc/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
         <p>In the spirit of the holidays and the new year, please type one thing you will do yourself that you hope will reduce the amount of bullying</p>
-        <textarea name="entry.833676642" rows="8" cols="0" class="ss-q-long" id="entry_833676642" dir="auto" aria-label="Is everything going to be alright?  " aria-required="true" required=""></textarea>
+        <textarea name="entry.965718517" rows="8" cols="0" class="ss-q-long" id="entry_965718517" dir="auto" aria-label="Is everything going to be alright?  " aria-required="true" required=""></textarea>
         <br>
         <br>
         <input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action btn btn-default">
