--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Stop The Bullying</title>
+		<title>Help make someone's day</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="shortcut icon" href="http://i147.photobucket.com/albums/r295/redrumcivic/pantherpaw.jpg">
 		<script type="text/javascript" src="js/jQuery.js"></script>
@@ -29,9 +29,9 @@
     <div class="jumbotron" align="center" style="background-color:#fff">
       <div class="container">
       <img src="img/heart.gif" class="animated infinite pulse" height="50px">
-      <h2>Bullying benefits nobody</h2>
+      <h2>We've all had our share of bad days</h2>
       <form action="https://docs.google.com/forms/d/1a8rAh85CI-ob5I-RtCKT0gp_41JjkA21u5Kyfr3O5Vc/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
-        <p>In the spirit of the holidays and the new year, please type one thing you will do yourself that you hope will reduce the amount of bullying</p>
+        <p>One of my best friends isn't feeling very chipper at the moment and needs some support. If you could post a short message, i.e. "Don't worry, it's all going to be okay", that would be amazing and would make someone's day. Thanks <i class="fa fa-heart animated infinite pulse" style="color:red"></i></p>
         <textarea name="entry.965718517" rows="8" cols="0" class="ss-q-long" id="entry_965718517" dir="auto" aria-label="Is everything going to be alright?  " aria-required="true" required=""></textarea>
         <br>
         <br>
